@@ -500,20 +500,18 @@ total-output-value=Total Output Value: __1__
 total-output-with-prod=Total Output w/ Prod.: __1__
 productivity-bonus=Productivity
 cost=Cost: __1__
-show-only-claimed=Show only claimed
-exact-inputs-match=Exact inputs match
-exact-inputs-match-tooltip=Only show trades with the exact same inputs as set in the filter.
-exact-outputs-match=Exact outputs match
-exact-outputs-match-tooltip=Only show trades with the exact same outputs as set in the filter.
+show-only-claimed=Show only [color=green]claimed[.color]
+show-only-interplanetary=Show only [color=cyan]interplanetary[.color]
+exclude-dungeons=Exclude [color=pink]dungeons[.color]
+exclude-sinks-generators=Exclude [color=yellow]sinks/generators[.color]
+exact=Exact
 ping-in-chat=Ping in chat.
 quest-reward=(Quest Reward)
 quest-reward-free-hexes-remaining=Free hex claims remaining: [font=__3__][color=__2__]__1__[.color][.font]
 sort-method=Sort method
 ascending=Ascending
 descending=Descending
-click-to-swap-sides=Click to swap sides.
-max-inputs=Max inputs [font=heading-2](__1__)[.font]
-max-outputs=Max outputs [font=heading-2](__1__)[.font]
+max=[font=heading-2](__1__)[.font] Max
 max-trades=Max trades
 all=All
 none-yet-visited=(None yet visited)
